--- a/wiki/de/TechDraw_DimensionRepair.html
+++ b/wiki/de/TechDraw_DimensionRepair.html
@@ -54,7 +54,7 @@
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <p>Das Werkzeug <b>TechDraw Ma&szlig;reparatur</b> kann die 2D- oder 3D-Geometriereferenzen eines Ma&szlig;es anpassen. Solche Referenzen k&ouml;nnen aufgrund des &bdquo;<a href="../de/Topological_naming_problem.html" title="Topological naming problem/de">Problems der topologischen Benennung</a>&ldquo; oder durch das Ausblenden verdeckter Kanten ung&uuml;ltig werden.
-</p><p>Siehe <a href="../de/TechDraw_LengthDimension.html#Begrenzungen" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a> f&uuml;r Weiteres &uuml;ber Ma&szlig;e und das Problem der topologische Benennung.
+</p><p>Siehe <a href="../de/TechDraw_LengthDimension.html#Limitation" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a> f&uuml;r Weiteres &uuml;ber Ma&szlig;e und das Problem der topologischen Benennung.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -122,12 +122,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111193734
+Cached time: 20260111193853
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.074 seconds
+Real time usage: 0.118 seconds
 Preprocessor visited node count: 349/1000000
 Post&#8208;expand include size: 27660/2097152 bytes
 Template argument size: 11010/2097152 bytes
@@ -138,19 +138,19 @@ Unstrip post&#8208;expand size: 1260/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.853      1 -total
- 26.69%    9.037      1 Template:PropertyData/de
- 20.27%    6.863      1 Template:Variable
- 19.29%    6.531      1 Template:TechDraw_Tools_navi/de
- 18.00%    6.093      1 Template:Value
- 11.71%    3.965      2 Template:Navigation_menu_2
- 11.36%    3.846      1 Template:Userdocnavi/de
-  7.47%    2.530      2 Template:Docnav/de
-  7.10%    2.404      1 Template:GuiCommand/de
-  6.68%    2.263      1 Template:Incode
+100.00%   27.484      1 -total
+ 25.90%    7.119      1 Template:TechDraw_Tools_navi/de
+ 18.40%    5.058      1 Template:Value
+ 15.99%    4.394      1 Template:PropertyData/de
+ 14.95%    4.110      2 Template:Navigation_menu_2
+ 10.26%    2.820      1 Template:GuiCommand/de
+  9.46%    2.601      1 Template:Incode
+  9.02%    2.478      2 Template:Docnav/de
+  8.42%    2.313      1 Template:Userdocnavi/de
+  7.54%    2.073      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111193734 and revision id 1735851. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111193853 and revision id 1735855. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
