Updated page About FreeCAD/bg

--- a/wiki/bg/About_FreeCAD.html
+++ b/wiki/bg/About_FreeCAD.html
@@ -15,7 +15,7 @@
 <li><a href="../sk/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="O FreeCADe (53% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
 <li><a href="../sv/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--low" title="About FreeCAD (13% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="O programu FreeCAD (60% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1054; FreeCAD (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--low" title="About FreeCAD (7% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="&#20851;&#20110;FreeCAD (47% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -44,11 +44,8 @@
 </p><p><span id="About_the_FPA"></span>
 </p>
 <h3><span id=".D0.9E.D1.82.D0.BD.D0.BE.D1.81.D0.BD.D0.BE_FPA"></span><span class="mw-headline" id="&#1054;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086;_FPA">&#1054;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; FPA</span></h3>
-<div class="mw-translate-fuzzy">
-<p>&#1055;&#1088;&#1086;&#1077;&#1082;&#1090;&#1098;&#1090; FreeCAD &#1089;&#1077; &#1087;&#1086;&#1076;&#1082;&#1088;&#1077;&#1087;&#1103; &#1080; &#1086;&#1090; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1072;&#1094;&#1080;&#1103; &#1089; &#1085;&#1077;&#1089;&#1090;&#1086;&#1087;&#1072;&#1085;&#1089;&#1082;&#1072; &#1094;&#1077;&#1083;, <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FreeCAD project association (FPA)</a>. FPA &#1077; &#1085;&#1077;&#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084; &#1086;&#1088;&#1075;&#1072;&#1085;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085; &#1086;&#1090; &#1085;&#1103;&#1082;&#1086;&#1080; &#1074;&#1077;&#1090;&#1077;&#1088;&#1072;&#1085;&#1080; &#1085;&#1072; FreeCAD &#1087;&#1088;&#1077;&#1079; 2021 &#1075;., &#1079;&#1072; &#1076;&#1072; &#1089;&#1098;&#1073;&#1080;&#1088;&#1072; [[donate|&#1076;&#1072;&#1088;&#1077;&#1085;&#1080;&#1103;] &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1088;&#1077;&#1089;&#1091;&#1088;&#1089;&#1080; &#1074; &#1087;&#1086;&#1076;&#1082;&#1088;&#1077;&#1087;&#1072; &#1085;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1080; &#1085;&#1077;&#1075;&#1086;&#1074;&#1072;&#1090;&#1072; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090;, &#1076;&#1072; &#1087;&#1086;&#1084;&#1086;&#1075;&#1085;&#1077; &#1079;&#1072; &#1079;&#1072;&#1097;&#1080;&#1090;&#1072;&#1090;&#1072; &#1085;&#1072; &#1090;&#1072;&#1079;&#1080; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090; &#1080; &#1076;&#1072; &#1117; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1080; &#1076;&#1072; &#1087;&#1088;&#1086;&#1076;&#1098;&#1083;&#1078;&#1080; &#1076;&#1072; &#1089;&#1077; &#1088;&#1072;&#1079;&#1074;&#1080;&#1074;&#1072; &#1074; &#1085;&#1072;&#1081;-&#1076;&#1086;&#1073;&#1088;&#1080;&#1090;&#1077; &#1091;&#1089;&#1083;&#1086;&#1074;&#1080;&#1103; &#1080; &#1076;&#1072; &#1087;&#1088;&#1077;&#1076;&#1089;&#1090;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1089;&#1088;&#1077;&#1097;&#1091; &#1076;&#1088;&#1091;&#1075;&#1080; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080; &#1082;&#1072;&#1090;&#1086; &#1082;&#1086;&#1084;&#1087;&#1072;&#1085;&#1080;&#1080; &#1080; &#1080;&#1085;&#1089;&#1090;&#1080;&#1090;&#1091;&#1094;&#1080;&#1080;.
-</p>
-</div>
-<p><br>
+<p>&#1055;&#1088;&#1086;&#1077;&#1082;&#1090;&#1098;&#1090; FreeCAD &#1089;&#1077; &#1087;&#1086;&#1076;&#1082;&#1088;&#1077;&#1087;&#1103; &#1080; &#1086;&#1090; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1072;&#1094;&#1080;&#1103; &#1089; &#1085;&#1077;&#1089;&#1090;&#1086;&#1087;&#1072;&#1085;&#1089;&#1082;&#1072; &#1094;&#1077;&#1083;, <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FreeCAD project association (FPA)</a>. FPA &#1077; &#1085;&#1077;&#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084; &#1086;&#1088;&#1075;&#1072;&#1085;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085; &#1086;&#1090; &#1085;&#1103;&#1082;&#1086;&#1080; &#1074;&#1077;&#1090;&#1077;&#1088;&#1072;&#1085;&#1080; &#1085;&#1072; FreeCAD &#1087;&#1088;&#1077;&#1079; 2021 &#1075;., &#1079;&#1072; &#1076;&#1072; &#1089;&#1098;&#1073;&#1080;&#1088;&#1072; <a href="../Donate.html" title="Donate">&#1076;&#1072;&#1088;&#1077;&#1085;&#1080;&#1103;</a> &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1088;&#1077;&#1089;&#1091;&#1088;&#1089;&#1080; &#1074; &#1087;&#1086;&#1076;&#1082;&#1088;&#1077;&#1087;&#1072; &#1085;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1080; &#1085;&#1077;&#1075;&#1086;&#1074;&#1072;&#1090;&#1072; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090;, &#1076;&#1072; &#1087;&#1086;&#1084;&#1086;&#1075;&#1085;&#1077; &#1079;&#1072; &#1079;&#1072;&#1097;&#1080;&#1090;&#1072;&#1090;&#1072; &#1085;&#1072; &#1090;&#1072;&#1079;&#1080; &#1086;&#1073;&#1097;&#1085;&#1086;&#1089;&#1090; &#1080; &#1076;&#1072; &#1117; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1080; &#1076;&#1072; &#1087;&#1088;&#1086;&#1076;&#1098;&#1083;&#1078;&#1080; &#1076;&#1072; &#1089;&#1077; &#1088;&#1072;&#1079;&#1074;&#1080;&#1074;&#1072; &#1074; &#1085;&#1072;&#1081;-&#1076;&#1086;&#1073;&#1088;&#1080;&#1090;&#1077; &#1091;&#1089;&#1083;&#1086;&#1074;&#1080;&#1103; &#1080; &#1076;&#1072; &#1087;&#1088;&#1077;&#1076;&#1089;&#1090;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1089;&#1088;&#1077;&#1097;&#1091; &#1076;&#1088;&#1091;&#1075;&#1080; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080; &#1082;&#1072;&#1090;&#1086; &#1082;&#1086;&#1084;&#1087;&#1072;&#1085;&#1080;&#1080; &#1080; &#1080;&#1085;&#1089;&#1090;&#1080;&#1090;&#1091;&#1094;&#1080;&#1080;.
+</p><p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Online_Help_Startpage.html" title="Online Help Startpage">Online Help Startpage</a></div>
@@ -72,29 +69,29 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111193547
+Cached time: 20260111193929
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.076 seconds
-Real time usage: 0.181 seconds
-Preprocessor visited node count: 136/1000000
+CPU time usage: 0.058 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 6988/2097152 bytes
 Template argument size: 2217/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4223/5000000 bytes
+Unstrip post&#8208;expand size: 4227/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.342      1 -total
- 70.40%   12.913      1 Template:Userdocnavi/bg
- 30.80%    5.650      1 Template:Navigation_menu_2
- 28.60%    5.246      2 Template:Docnav
+100.00%    9.304      1 -total
+ 77.45%    7.206      1 Template:Userdocnavi/bg
+ 22.77%    2.118      1 Template:Navigation_menu_2
+ 20.97%    1.951      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193547 and revision id 1735841. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193928 and revision id 1735859. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
