--- a/wiki/de/TechDraw_DimensionRepair.html
+++ b/wiki/de/TechDraw_DimensionRepair.html
@@ -58,7 +58,6 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Das Ma&szlig;, das korrigiert werden soll, ausw&auml;hlen und wahlweise die neuen Geometriereferenzen wie Punkte oder Kanten in der TechDraw-Ansicht oder in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
 <ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_DimensionRepair.svg&amp;filetimestamp=20241126214016&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ma&szlig;referenzen reparieren</a></span> dr&uuml;cken.</li>
@@ -68,7 +67,6 @@
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Referenzen durch aktuelle Auswahl ersetzen</span> dr&uuml;cken.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken, um das Ma&szlig; zu aktualisieren.</li>
 <li>Wurden 3D-Referenzen ausgew&auml;hlt: Wahlweise die <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Measure Type</b> des Ma&szlig;es auf <code>True</code> setzen.</li></ol>
-</div>
 <p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
@@ -122,13 +120,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111193853
+Cached time: 20260111194007
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.118 seconds
-Preprocessor visited node count: 349/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.100 seconds
+Preprocessor visited node count: 348/1000000
 Post&#8208;expand include size: 27660/2097152 bytes
 Template argument size: 11010/2097152 bytes
 Highest expansion depth: 8/100
@@ -138,19 +136,19 @@ Unstrip post&#8208;expand size: 1260/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.484      1 -total
- 25.90%    7.119      1 Template:TechDraw_Tools_navi/de
- 18.40%    5.058      1 Template:Value
- 15.99%    4.394      1 Template:PropertyData/de
- 14.95%    4.110      2 Template:Navigation_menu_2
- 10.26%    2.820      1 Template:GuiCommand/de
-  9.46%    2.601      1 Template:Incode
-  9.02%    2.478      2 Template:Docnav/de
-  8.42%    2.313      1 Template:Userdocnavi/de
-  7.54%    2.073      1 Template:Variable
+100.00%   21.562      1 -total
+ 25.90%    5.584      1 Template:TechDraw_Tools_navi/de
+ 14.76%    3.182      2 Template:Navigation_menu_2
+ 13.61%    2.935      1 Template:GuiCommand/de
+ 13.05%    2.813      1 Template:PropertyData/de
+ 11.95%    2.576      2 Template:Docnav/de
+ 11.54%    2.489      1 Template:Value
+ 10.18%    2.196      1 Template:Userdocnavi/de
+  7.14%    1.539      1 Template:Variable
+  5.91%    1.274      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111193853 and revision id 1735855. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111194006 and revision id 1735861. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
