Updated page TechDraw DimensionRepair/de

--- a/wiki/de/TechDraw_DimensionRepair.html
+++ b/wiki/de/TechDraw_DimensionRepair.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw DimensionRepair/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+DimensionRepair&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_DimensionRepair.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw DimensionRepair (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_DimensionRepair.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw R&eacute;paration des cotes (67% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_DimensionRepair.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Ripara la quota (67% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -71,12 +71,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Das Werkzeug TechDraw Ma&szlig;reparatur kann nicht in <a href="../de/Macros.html" title="Macros/de">Makros</a> oder von der <a href="../de/Python.html" title="Python/de">Python</a>-Konsole aus verwendet werden. Ma&szlig;referenz-Eigenschaften k&ouml;nnen mit Hilfe von Python aktualisiert werden.
-</p>
-</div>
-<p><br>
+</p><p>Das Werkzeug TechDraw Ma&szlig;reparatur kann nicht in <a href="../de/Macros.html" title="Macros/de">Makros</a> oder von der <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> aus verwendet werden. Ma&szlig;referenz-Eigenschaften k&ouml;nnen mit Hilfe von Python aktualisiert werden.
+</p><p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_VerticalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_VerticalExtentDimension.html" title="TechDraw VerticalExtentDimension/de">Ma&szlig;VertikaleAusdehnung</a></div>
@@ -120,35 +116,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194007
+Cached time: 20260111194044
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.072 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 348/1000000
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 27660/2097152 bytes
 Template argument size: 11010/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1260/5000000 bytes
+Unstrip post&#8208;expand size: 1264/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.562      1 -total
- 25.90%    5.584      1 Template:TechDraw_Tools_navi/de
- 14.76%    3.182      2 Template:Navigation_menu_2
- 13.61%    2.935      1 Template:GuiCommand/de
- 13.05%    2.813      1 Template:PropertyData/de
- 11.95%    2.576      2 Template:Docnav/de
- 11.54%    2.489      1 Template:Value
- 10.18%    2.196      1 Template:Userdocnavi/de
-  7.14%    1.539      1 Template:Variable
-  5.91%    1.274      3 Template:Button
+100.00%   23.379      1 -total
+ 27.76%    6.491      1 Template:TechDraw_Tools_navi/de
+ 15.61%    3.650      1 Template:Value
+ 15.04%    3.517      1 Template:PropertyData/de
+ 14.30%    3.344      2 Template:Navigation_menu_2
+ 11.24%    2.628      1 Template:GuiCommand/de
+ 10.01%    2.341      2 Template:Docnav/de
+  9.06%    2.118      1 Template:Incode
+  7.43%    1.738      1 Template:Userdocnavi/de
+  7.25%    1.696      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111194006 and revision id 1735861. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111194044 and revision id 1735863. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
