--- a/wiki/de/TechDraw_DimensionRepair.html
+++ b/wiki/de/TechDraw_DimensionRepair.html
@@ -116,12 +116,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194044
+Cached time: 20260111194052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 27660/2097152 bytes
 Template argument size: 11010/2097152 bytes
@@ -132,19 +132,19 @@ Unstrip post&#8208;expand size: 1264/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.379      1 -total
- 27.76%    6.491      1 Template:TechDraw_Tools_navi/de
- 15.61%    3.650      1 Template:Value
- 15.04%    3.517      1 Template:PropertyData/de
- 14.30%    3.344      2 Template:Navigation_menu_2
- 11.24%    2.628      1 Template:GuiCommand/de
- 10.01%    2.341      2 Template:Docnav/de
-  9.06%    2.118      1 Template:Incode
-  7.43%    1.738      1 Template:Userdocnavi/de
-  7.25%    1.696      1 Template:Variable
+100.00%   32.651      1 -total
+ 28.44%    9.286      1 Template:TechDraw_Tools_navi/de
+ 21.17%    6.912      1 Template:PropertyData/de
+ 14.08%    4.599      1 Template:GuiCommand/de
+ 13.72%    4.479      1 Template:Variable
+ 12.66%    4.134      2 Template:Navigation_menu_2
+ 11.33%    3.701      1 Template:Value
+  8.76%    2.859      2 Template:Docnav/de
+  5.31%    1.735      3 Template:Button
+  4.40%    1.435      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111194044 and revision id 1735863. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:305949-0!canonical and timestamp 20260111194052 and revision id 1735863. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
