--- a/wiki/de/TechDraw_AxoLengthDimension.html
+++ b/wiki/de/TechDraw_AxoLengthDimension.html
@@ -1,20 +1,18 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw AxoLengthDimension/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+AxoLengthDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_AxoLengthDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw AxoLengthDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Cote axonom&eacute;trique (57% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota lineare assonometrica (57% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Wstaw wymiar d&#322;ugo&#347;ci w aksonometrii (57% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wymiar d&#322;ugo&#347;ci w aksonometrii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw AxoLengthDimension
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1051;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1081; &#1056;&#1072;&#1079;&#1084;&#1077;&#1088; &#1074; &#1055;&#1077;&#1088;&#1089;&#1087;&#1077;&#1082;&#1090;&#1080;&#1074;&#1077;) (14% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#52629;&#52769; &#44600;&#51060; &#52824;&#49688; (57% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Balloon.html" title="TechDraw Balloon/de">Hinweisfeld</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../TechDraw_DimensionRepair.html" title="TechDraw DimensionRepair">Ma&szlig;reparatur</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -96,14 +94,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Balloon.html" title="TechDraw Balloon/de">Hinweisfeld</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../TechDraw_DimensionRepair.html" title="TechDraw DimensionRepair">Ma&szlig;reparatur</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -140,35 +136,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145808
+Cached time: 20260111194157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.141 seconds
-Preprocessor visited node count: 313/1000000
-Post&#8208;expand include size: 27325/2097152 bytes
-Template argument size: 10826/2097152 bytes
+CPU time usage: 0.077 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 311/1000000
+Post&#8208;expand include size: 27307/2097152 bytes
+Template argument size: 10814/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1736/5000000 bytes
+Unstrip post&#8208;expand size: 1743/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.393      1 -total
- 22.74%    8.957      1 Template:TechDraw_Tools_navi/de
- 18.13%    7.143      1 Template:GuiCommand/de
- 16.30%    6.422      2 Template:Docnav/de
- 15.72%    6.192      2 Template:Navigation_menu_2
- 10.70%    4.214      1 Template:Userdocnavi/de
-  8.64%    3.402      1 Template:VersionPlus/de
-  8.63%    3.398      1 Template:Button
-  6.54%    2.576      1 Template:Caption
-  6.19%    2.439      1 Template:MenuCommand
+100.00%   50.428      1 -total
+ 29.72%   14.988      1 Template:TechDraw_Tools_navi/de
+ 21.22%   10.700      1 Template:Userdocnavi/de
+ 17.68%    8.917      2 Template:Navigation_menu_2
+ 12.26%    6.181      1 Template:GuiCommand/de
+ 10.25%    5.170      1 Template:VersionPlus/de
+  8.15%    4.112      1 Template:MenuCommand
+  5.75%    2.902      2 Template:Docnav/de
+  5.56%    2.806      1 Template:Caption
+  4.89%    2.465      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111145808 and revision id 1734425. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111194157 and revision id 1735869. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
