Created page with "|Select_text=Stiskněte levé tlačítko myši nad objektem, který chcete vybrat."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -86,14 +86,12 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</div></td>
++<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Use the mouse wheel to zoom in and out.
@@ -1345,15 +1343,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194235
+Cached time: 20260111194403
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.339 seconds
-Real time usage: 0.463 seconds
-Preprocessor visited node count: 1803/1000000
-Post&#8208;expand include size: 89484/2097152 bytes
-Template argument size: 33530/2097152 bytes
+CPU time usage: 0.397 seconds
+Real time usage: 0.795 seconds
+Preprocessor visited node count: 1802/1000000
+Post&#8208;expand include size: 89434/2097152 bytes
+Template argument size: 33480/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1361,19 +1359,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   86.716      1 -total
- 14.58%   12.645      8 Template:ASCII
- 12.44%   10.788      1 Template:Blender_Navigation
-  6.40%    5.552      1 Template:Userdocnavi/cs
-  5.01%    4.343      2 Template:CAD_Navigation
-  4.75%    4.117     85 Template:KEY
-  4.45%    3.856      1 Template:Gesture_Navigation
-  4.42%    3.833      1 Template:OpenSCAD_Navigation
-  4.08%    3.540      1 Template:SiemensNX_Navigation
-  3.77%    3.273      1 Template:Revit_Navigation
+100.00%  137.106      1 -total
+ 10.34%   14.178      8 Template:ASCII
+  9.27%   12.707      2 Template:CAD_Navigation
+  7.55%   10.348      1 Template:Userdocnavi/cs
+  7.02%    9.624      1 Template:OpenSCAD_Navigation
+  5.46%    7.479      1 Template:MayaGesture_Navigation
+  5.26%    7.217      1 Template:Blender_Navigation
+  4.76%    6.523      1 Template:Inventor_Navigation/cs
+  4.75%    6.513      1 Template:OpenCascade_Navigation
+  4.32%    5.920      1 Template:SiemensNX_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194234 and revision id 1735873. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194402 and revision id 1735878. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
