--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -92,10 +92,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Use the mouse wheel to zoom in and out.
-
+</td>
+<td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat zobrazen&iacute;.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Clicking the middle mouse button re-centers the view on the location of the pointer.
 </p>
@@ -1343,15 +1341,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194403
+Cached time: 20260111194439
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.397 seconds
-Real time usage: 0.795 seconds
-Preprocessor visited node count: 1802/1000000
-Post&#8208;expand include size: 89434/2097152 bytes
-Template argument size: 33480/2097152 bytes
+CPU time usage: 0.338 seconds
+Real time usage: 0.785 seconds
+Preprocessor visited node count: 1801/1000000
+Post&#8208;expand include size: 89407/2097152 bytes
+Template argument size: 33453/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1359,19 +1357,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  137.106      1 -total
- 10.34%   14.178      8 Template:ASCII
-  9.27%   12.707      2 Template:CAD_Navigation
-  7.55%   10.348      1 Template:Userdocnavi/cs
-  7.02%    9.624      1 Template:OpenSCAD_Navigation
-  5.46%    7.479      1 Template:MayaGesture_Navigation
-  5.26%    7.217      1 Template:Blender_Navigation
-  4.76%    6.523      1 Template:Inventor_Navigation/cs
-  4.75%    6.513      1 Template:OpenCascade_Navigation
-  4.32%    5.920      1 Template:SiemensNX_Navigation
+100.00%   82.849      1 -total
+ 12.05%    9.983      1 Template:Userdocnavi/cs
+  8.34%    6.912      8 Template:ASCII
+  7.57%    6.270      1 Template:OpenSCAD_Navigation
+  6.76%    5.604     85 Template:KEY
+  5.81%    4.816      1 Template:Touchpad_Navigation/cs
+  5.47%    4.532      1 Template:SiemensNX_Navigation
+  5.42%    4.487      2 Template:CAD_Navigation
+  5.06%    4.192      1 Template:Navigation_menu_2
+  4.89%    4.054      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194402 and revision id 1735878. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194439 and revision id 1735880. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
