--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -94,10 +94,8 @@
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 </td>
 <td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat zobrazen&iacute;.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Clicking the middle mouse button re-centers the view on the location of the pointer.
+<p>Kliknut&iacute;m na prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i se zobrazen&iacute; znovu vycentruje na pozici ukazatele.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold the middle mouse button, then move the pointer.
@@ -1341,15 +1339,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194439
+Cached time: 20260111194513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.338 seconds
-Real time usage: 0.785 seconds
-Preprocessor visited node count: 1801/1000000
-Post&#8208;expand include size: 89407/2097152 bytes
-Template argument size: 33453/2097152 bytes
+CPU time usage: 0.355 seconds
+Real time usage: 0.607 seconds
+Preprocessor visited node count: 1800/1000000
+Post&#8208;expand include size: 89362/2097152 bytes
+Template argument size: 33408/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1357,19 +1355,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.849      1 -total
- 12.05%    9.983      1 Template:Userdocnavi/cs
-  8.34%    6.912      8 Template:ASCII
-  7.57%    6.270      1 Template:OpenSCAD_Navigation
-  6.76%    5.604     85 Template:KEY
-  5.81%    4.816      1 Template:Touchpad_Navigation/cs
-  5.47%    4.532      1 Template:SiemensNX_Navigation
-  5.42%    4.487      2 Template:CAD_Navigation
-  5.06%    4.192      1 Template:Navigation_menu_2
-  4.89%    4.054      2 Template:Button
+100.00%   89.893      1 -total
+ 13.09%   11.767      8 Template:ASCII
+ 10.28%    9.245      1 Template:Userdocnavi/cs
+  7.11%    6.391      2 Template:CAD_Navigation
+  6.19%    5.564     85 Template:KEY
+  5.16%    4.636      1 Template:OpenSCAD_Navigation
+  5.00%    4.497      1 Template:Gesture_Navigation
+  4.40%    3.956      1 Template:TinkerCAD_Navigation
+  4.17%    3.749      1 Template:SolidWorks_Navigation
+  4.09%    3.676      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194439 and revision id 1735880. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194513 and revision id 1735882. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
