Updated page TechDraw AxoLengthDimension/de

--- a/wiki/de/TechDraw_AxoLengthDimension.html
+++ b/wiki/de/TechDraw_AxoLengthDimension.html
@@ -63,17 +63,15 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Eine der folgenden M&ouml;glichkeiten ausw&auml;hlen:
 <ul><li>Zwei Kanten (e1 und e2 im Bild) ausw&auml;hlen. Die erste Kante definiert die Ausrichtung der Ma&szlig;linie und den gemessenen Abstand. Die zweite Kante definiert die Ausrichtung der Ma&szlig;hilfslinien.</li>
 <li>Zwei Kanten (e3 und e4 im Bild) und zwei Punkte (v1 und v2 im Bild) ausw&auml;hlen. Die erste Kante definiert die Ausrichtung der Ma&szlig;linie. Die zweite Kante definiert die Ausrichtung der Ma&szlig;hilfslinien. Die Punkte bestimmen den gemessenen Abstand.</li></ul></li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
 <ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_AxoLengthDimension.svg&amp;filetimestamp=20241127175334&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Axonometrisches L&auml;ngenma&szlig;</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Beschriftungen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AxoLengthDimension.svg&amp;filetimestamp=20241127175334&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axonometrisches L&auml;ngenma&szlig;</b> ausw&auml;hlen.</li></ul></li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Ma&szlig;eintr&auml;ge &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AxoLengthDimension.svg&amp;filetimestamp=20241127175334&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axonometrisches L&auml;ngenma&szlig;</b> ausw&auml;hlen.</li></ul></li>
 <li>Ein axonometrisches L&auml;ngenma&szlig; wird zur Ansicht hinzugef&uuml;gt.</li>
 <li>Das Ma&szlig; kann an die gew&uuml;nschte Position gezogen werden.</li>
-<li>Falls erforderlich, k&ouml;nnen Toleranzen, wie auf der <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html#Toleranzen" title="TechDraw Geometric dimensioning and tolerancing/de">GD&amp;T-Seite</a> beschrieben, hinzugef&uuml;gt werden.</li></ol>
-</div>
+<li>Falls erforderlich, k&ouml;nnen Toleranzen, wie auf der <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html#Tolerances" title="TechDraw Geometric dimensioning and tolerancing/de">dieser Seite</a> beschrieben, hinzugef&uuml;gt werden.</li></ol>
 <p><span id="Display_3D_measurement"></span>
 </p>
 <h3><span class="mw-headline" id="3D-Abmessungen_anzeigen">3D-Abmessungen anzeigen</span></h3>
@@ -134,15 +132,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194727
+Cached time: 20260111194909
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.111 seconds
-Preprocessor visited node count: 310/1000000
-Post&#8208;expand include size: 27277/2097152 bytes
-Template argument size: 10794/2097152 bytes
+CPU time usage: 0.100 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 309/1000000
+Post&#8208;expand include size: 27276/2097152 bytes
+Template argument size: 10793/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -150,19 +148,19 @@ Unstrip post&#8208;expand size: 1743/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.458      1 -total
- 33.78%    7.248      1 Template:TechDraw_Tools_navi/de
- 18.74%    4.021      2 Template:Navigation_menu_2
- 13.73%    2.947      2 Template:Docnav/de
- 11.51%    2.470      1 Template:GuiCommand/de
- 10.43%    2.237      1 Template:VersionPlus/de
- 10.20%    2.188      1 Template:Userdocnavi/de
-  6.45%    1.384      1 Template:Caption
-  5.51%    1.183      1 Template:Button
-  5.29%    1.135      1 Template:MenuCommand
+100.00%   30.154      1 -total
+ 41.94%   12.646      1 Template:TechDraw_Tools_navi/de
+ 21.52%    6.490      2 Template:Navigation_menu_2
+ 13.20%    3.979      1 Template:Userdocnavi/de
+  9.76%    2.944      2 Template:Docnav/de
+  9.39%    2.830      1 Template:GuiCommand/de
+  7.88%    2.375      1 Template:VersionPlus/de
+  6.24%    1.882      1 Template:Caption
+  5.00%    1.509      1 Template:Button
+  4.05%    1.220      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111194727 and revision id 1735898. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111194909 and revision id 1735902. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
